--- a/src/index.css
+++ b/src/index.css
@@ -2,77 +2,4 @@
 @tailwind components;
 @tailwind utilities;
 
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Cinzel','Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-}
-
-/* Modal Overlay */
-.modal-overlay {
-  background-color: rgba(0, 0, 0, 0.7);
-  position: fixed;
-  inset: 0;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  opacity: 0;
-  transition: opacity 300ms ease-in-out;
-  z-index: 50;
-}
-
-.modal-overlay.ReactModal__Overlay--after-open {
-  opacity: 1;
-}
-
-.modal-overlay.ReactModal__Overlay--before-close {
-  opacity: 0;
-}
-
-/* Modal Content */
-.modal-content {
-  background: #000;
-  padding: 1.5rem;
-  border-radius: 1rem;
-  width: 90%;
-  max-width: 800px;
-  max-height: 90vh;
-  overflow-y: auto;
-  position: relative;
-  transform: scale(0.95);
-  transition: transform 300ms ease-in-out;
-  z-index: 60;
-}
-
-.modal-content.ReactModal__Content--after-open {
-  transform: scale(1);
-}
-
-.modal-content.ReactModal__Content--before-close {
-  transform: scale(0.95);
-}
-
-@layer utilities {
-  .animate-fade-in {
-    animation: fadeIn 0.6s ease-out forwards;
-  }
-
-  @keyframes fadeIn {
-    from {
-      opacity: 0;
-      transform: translateY(10px);
-    }
-    to {
-      opacity: 1;
-      transform: translateY(0);
-    }
-  }
-}
+.gallery-scroll::-webkit-scrollbar { height: 8px }
